# cnn_from_scratch

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_mnist.sh
include/: Conv2d.h  Dropout.h  FullyConnected.h  LRScheduler.h  LinearLRScheduler.h  MNISTDataLoader.h  MaxPool.h  Module.h  Network.h  NetworkModel.h  OutputLayer.h  ReLU.h  Sigmoid.h  SoftmaxClassifier.h  Tensor.h  Tensor1d.h  Tensor2d.h
src/: Conv2d.cpp  Dropout.cpp  FullyConnected.cpp  LinearLRScheduler.cpp  MNISTDataLoader.cpp  MaxPool.cpp  Network.cpp  NetworkModel.cpp  ReLU.cpp  Sigmoid.cpp  SoftmaxClassifier.cpp  Tensor.cpp  Tensor1d.cpp  Tensor2d.cpp  main.cpp
